# gh-download

./: AGENTS.md  Cargo.toml  Justfile  README.md  README.zh.md
.github/workflows/: ci.yml  release.yml
artwork/prompts/: artical-cover.md
openspec/: config.yaml
openspec/changes/add-rust-gh-download-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-refine-prefix-proxy-flow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-show-help-when-no-args/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-split-large-rust-modules/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-add-api-base-and-regular-ci/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-add-concurrent-downloads/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-add-json-output/: design.md  proposal.md  (+1 more)
openspec/specs/binary-release-publishing/: spec.md
openspec/specs/cli-config-file/: spec.md
openspec/specs/code-organization/: spec.md
openspec/specs/debug-download-flow/: spec.md
openspec/specs/download-concurrency/: spec.md
openspec/specs/github-path-download/: spec.md
openspec/specs/json-output/: spec.md
openspec/specs/local-write-policy/: spec.md
openspec/specs/prefix-proxy-mode/: spec.md
openspec/specs/regular-ci-validation/: spec.md
skills/gh-download/: SKILL.md
src/: cli.rs  download.rs  error.rs  i18n.rs  lib.rs  main.rs  output.rs
src/cli/: config.rs  help.rs  resolve.rs  types.rs
src/download/: models.rs  paths.rs  raw.rs  transport.rs
(+26 files in other folders)
