[package]
name = "gh-download"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Download a file or directory from a GitHub repository path."
repository = "https://github.com/belingud/gh-download"
homepage = "https://github.com/belingud/gh-download"
readme = "README.md"
keywords = ["github", "download", "cli", "files"]
categories = ["command-line-utilities"]
include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "README.zh.md",
    "LICENSE",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.27.0"
